# covariance-matrix-estimation-and-knn-classifier-for-facial-expression-recognition

./: CMakeLists.txt  README.md  Slide_ACIIDS2016-conference.pptx  fer_rgbd.cpp
